--- a/index.html
+++ b/index.html
@@ -142,6 +142,9 @@
       options: { responsive: true }
     });
 
-<script src="//code.tidio.co/ejdjuq91kuiansj92o4s7d0cfd3u6ljj.js" async></script>
+    // Landbot Chatbot Embed
+    
+  </script>
+  <script src="//code.tidio.co/ejdjuq91kuiansj92o4s7d0cfd3u6ljj.js" async></script>
 </body>
 </html>
