--- a/index.html
+++ b/index.html
@@ -144,7 +144,7 @@
 
     // Landbot Chatbot Embed
     new Landbot.Livechat({
-      configUrl: 'https://chats.landbot.io/v3/H-XXXXX-YYYYYY/index.json'
+      configUrl: 'https://landbot.online/v3/H-3051758-28RGGWN1VJ0J58IY/index.html'
     });
   </script>
 </body>
